--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIR})
 
-
 set(CMAKE_CXX_FLAGS "-g -Wall")
 set(GLEW_H /usr/local/Cellar/glew/2.1.0/include/GL)
 set(GLFW_H /usr/local/Cellar/glfw/3.2.1/include/GLFW)
@@ -15,5 +14,5 @@ set(GLFW_LINK /usr/local/Cellar/glfw/3.2.1/lib/libglfw.3.dylib)
 link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK})
 set(SOURCE_FILES main.cpp)
 
-add_executable(OpenGL_Course main.cpp Shader.cpp Shader.h stb_image.h)
+add_executable(OpenGL_Course main.cpp Shader.cpp Shader.h stb_image.h Camera.cpp Camera.h)
 target_link_libraries(OpenGL_Course ${OPENGL_LIBRARY})
